# job-scout-agent

./: .env.example  .gitignore  AUTHENTICATION_GUIDE.md  CHANGELOG_2025-11-30.md  GITHUB_SETUP.md  OBSIDIAN_INTEGRATION.md  OBSIDIAN_SYNC.md  OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  QUICK_START_GITHUB.md  README.md  UPDATE_LOG_2025-11-30.md  UPDATE_SUMMARY.md  demo.py  pyproject.toml
.claude/: settings.local.json
.obsidian/: app.json
docs/: audio-auto-processing-guide.md  audio-auto-processing-proposal.md  audio-feedback-guide.md  audio-feedback-processing-time.md  audio-feedback-test-guide.md  audio-folder-setup-guide.md  audio-quickstart.md  ca-manual.md  construction-management-guide.md  construction-management-quickstart.md  electrical-construction-management-guide.md  electrical-construction-management-quickstart.md  feedback-example-comparison.md  feedback-history-feature.md  feedback-tone-improvement-proposal.md  project-overview-complete.html  project-overview.html  requirements.md  weekly-feedback-report-guide.md  weekly-feedback-report-proposal.md
scripts/: add_reference_files.py  auto_process_audio.py  check_strategy_updates.py  debug_koujishi.py  debug_koujishi_detail.py  demo.py  demo_scraping.py  demo_scraping_full.py  export_reports.py  generate_weekly_report.py  link_transcript.py  migrate_strategy_sections.py  run_audio_feedback.py  run_feedback.py  scrape_all_jobs.py  scrape_all_jobs_demo.py  setup_auto_sync.sh  setup_strategy_check.sh  sync_obsidian.sh  test_denkikouji.py  test_slack_notification.py  upload_audio.py
spec/: 00-quickstart.md  (+15 more)
(+110 files in other folders)
